Fixing bg landing overflow

--- a/src/app.css
+++ b/src/app.css
@@ -28,6 +28,14 @@
 	font-style: italic;
 }
 
+* {
+	@apply m-0 p-0 box-border;
+}
+
+html {
+	@apply scroll-smooth;
+}
+
 body {
 	@apply anonymous-pro-regular bg-dark-100 text-white;
 }
